--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -6,5 +6,8 @@ jobs:
     steps:
       - name: Print to console
         run: echo Hello GH Actions!
-
+      - name: Print a few lines
+        run: |
+          echo Frist line!
+          echo Second line!
         
